<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
               android:background="@color/colorTitle"
               android:padding="16dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/posterofmovie"
                android:src="@mipmap/ic_launcher" />
           </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="170dp"
        android:background="@color/colorTitle"

        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            android:layout_marginTop="80dp"
            android:text="@string/nameOfMovie"
            android:textColor="@color/txtTitle"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_view_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/like"
            android:textColor="@color/colorLogo" />


    </LinearLayout>

</androidx.cardview.widget.CardView>